--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@mui/icons-material": "^6.4.7",
+    "@mui/icons-material": "^7.1.2",
     "@mui/joy": "^5.0.0-beta.51",
-    "@mui/material": "^6.4.7",
+    "@mui/material": "^7.1.2",
     "@mui/x-charts": "^7.28.0",
     "@mui/x-data-grid": "^7.28.0",
     "@mui/x-date-pickers": "^7.28.0",
@@ -30,7 +30,7 @@
     "react-modal": "^3.16.3",
     "react-paginate": "^8.3.0",
     "react-router-dom": "^6.27.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-toastify": "8.1.0",
     "sass": "1.48.0",
     "socket.io-client": "^4.8.1",
