--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "0.25.0",
     "bootstrap": "5.1.3",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "lodash": "4.17.21",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.19.4",
     "react-bootstrap": "2.1.1",
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.16.0",
