--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "bootstrap": "5.1.3",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "docx": "^9.5.1",
+    "file-saver": "^2.0.5",
     "lodash": "4.17.21",
     "react": "^18.3.1",
     "react-big-calendar": "^1.19.4",
@@ -36,7 +38,8 @@
     "react-toastify": "8.1.0",
     "sass": "1.48.0",
     "socket.io-client": "^4.8.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
