--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "0.25.0",
     "bootstrap": "5.1.3",
+    "chart.js": "^4.5.0",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "docx": "^9.5.1",
@@ -27,6 +28,7 @@
     "react": "^18.3.1",
     "react-big-calendar": "^1.19.4",
     "react-bootstrap": "2.1.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.16.0",
     "react-loader-spinner": "^5.4.5",
